JavaScript funtionality added

--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+
+
+
  <div class="container">
-     <h1>Twitch TV JSON API Application</h1>
+     <h1>TWITCH STREAMERS</h1>
+    <div class="channel-info" id="channelInfo">
+        
+    </div>
  </div>
+
+
+
 
 <!-- jQuery JavaScript -->
 <script src="resources/js/jquery-3.2.1.min.js"></script>
