--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
+    <div class="container">
+		<div class="row">
+			<div class="[ offset-md-2 col-xs-12 col-sm-offset-2 col-sm-8 ]">
+                <h1>TWITCH STREAMERS</h1>
+				<ul id="channelInfo" class="channel-list">
+					
 
-
-
- <div class="container">
-     <h1>TWITCH STREAMERS</h1>
-    <div class="channel-info" id="channelInfo">
-        
-    </div>
- </div>
+				</ul>
+			</div>
+		</div>
+	</div>
 
 
 
